# java-patching

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  mcp-config.json
backend/: .env.example  Dockerfile  mcp_server.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_llm_fields_to_impacts.py  003_add_traces.py  004_add_git_auth_fields.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analysis_agent.py  base.py  bus.py  explainer_agent.py  fixer_agent.py  impact_agent.py  openrewrite_agent.py  orchestrator_agent.py  patcher_agent.py  registry.py  release_notes_agent.py  renovate_agent.py  scanner_agent.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  analysis.py  audit.py  repository.py  trace.py  user.py
backend/app/schemas/: __init__.py  analysis.py  audit.py  repository.py  trace.py  user.py
backend/app/services/: __init__.py  agent_persistence_service.py  analyzer_service.py  audit_service.py  auth_service.py  llm_service.py  rag_ingestion_service.py  rag_service.py  release_notes_service.py  renovate_service.py  repository_service.py  sso_service.py  trace_service.py
backend/app/skills/: __init__.py  analysis_skills.py  base.py  (+3 more)
backend/docs/: AGENT_ARCHITECTURE.md
backend/scripts/: fix_admin_email.py  seed_admin.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_repositories.py
(+57 files in other folders)
